remove cors from landing page

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_SERVER_URL = https://monster-xlab-server.vercel.app/api/v1/images/uploads
-REACT_APP_SERVER_IMAGE_URL =https://monster-xlab-server.vercel.app/api/v1/images
+REACT_APP_SERVER_URL=https://monster-xlab-server.vercel.app/api/v1/images/uploads
+REACT_APP_SERVER_IMAGE_URL=https://monster-xlab-server.vercel.app/api/v1/images
